# opengl_phong

./: .gitignore  CMakeLists.txt  README.md  spinningcube_withlight.cpp  spinningcube_withlight_fs.glsl  spinningcube_withlight_vs.glsl
